# within-ashes

./: .gitignore  CMakeLists.txt  README.md  main.py
ashes/: start.py
ashes/systems/: hostile_npc.py  npc_manager.py  passive_npc.py  player.py  steam.py
include/: item.hpp  player.hpp
pysteam/: CMakeLists.txt  pysteam.c  pysteam.cpp  pysteam.h  pysteam.hpp
src/: main.cpp
